overflow fix + animations

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: black;
+}
+
 .italic {
   font-style: italic;
 }
@@ -32,6 +36,18 @@
   }
 }
 
+@keyframes zoom {
+  from {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 .feed {
   width: 100vw;
   height: 100vh;
@@ -39,10 +55,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  animation: fade-in 10s ease-in;
+  overflow: hidden;
 }
 
 .feed__img {
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   object-fit: cover;
+
+  animation: zoom 90s ease-in-out infinite;
 }
